--- a/school.html
+++ b/school.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title>ABC School</title>
     <link rel="stylesheet" type="text/css" href= "school.css">
     <script src="school.js"></script>
 </head>
@@ -32,12 +33,6 @@
     <a href="Student.html">Student</a>
     <a href="Parents.html">Parents</a>
 </div> 
-  </div>
-  
-  <div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
   </div>
 
      <div>
