--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      </header>
     <div class ="content">     
    <div class="navbar">
-    <a href="school.html">Home</a>
+    <a href="index.html">Home</a>
     <div class="dropdown">
       <button class="dropbtn" onclick="location.href='Principal.html'">Principal
       </button>
