--- a/Parents.html
+++ b/Parents.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a href="school.html">Home</a>
+        <a href="index.html">Home</a>
         <div class="dropdown">
           <button class="dropbtn" onclick="location.href='Principal.html'">Principal
           </button>
